@@ -192,3 +192,5 @@ issue 208: crafting output was added also to player inventory when closing it; f
 issue 209: generator script for recipe generator from json was not parsing output correctly; fixed on 11.06.2020 by uuk
 issue 174: loading bars in mod loading where not in the middle of the screen; fixed on 11.06.2020 by uuk
 issue 202: loading and generating progress % was calculated wrong; fixed on 11.06.2020 by uuk
+issue 211: when closing the game while the main inventory is open, items could get saved in the crafting grid;
+           fixed on 12.06.2020 by uuk
